--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.19.2",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "html-react-parser": "^5.1.10",
     "millify": "^6.1.0",
     "moment": "^2.30.1",
