--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cryptoapp",
   "version": "0.1.0",
-  "homepage": "https://Neeraj00010.github.io/CapitalGain",
+  "homepage": "https://Neeraj00010.github.io/CapitalGain/",
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
